--- a/ShiftsLogger/ShiftsLoggerUI.csproj
+++ b/ShiftsLogger/ShiftsLoggerUI.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ShiftLoggerAPI\ShiftsLoggerAPI.csproj" />
   </ItemGroup>
 
 </Project>
